# simba-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  config.yaml  docker-compose.ollama.yml  docker-compose.prod.yml  docker-compose.yml  flower.db.db  noxfile.py  package-lock.json  pyproject.toml  run.sh
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.gpu  README.md  app.py  config.yaml  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  dump.rdb  install_llm.sh  main.py  pyproject.toml  requirements.txt  run.py
backend/api/: chat_routes.py  database_routes.py  embedding_routes.py  ingestion_routes.py  parsing_routes.py  routes.py
backend/core/: celery_config.py  config.py
backend/database/: base.py  litedb_service.py  sqlite_service.py  tinydb_service.py
backend/faiss_index/: index.faiss  index.pkl
backend/markdown/: FP AMANÉA CARTES V11112024.md  FP AMANÉA COMPTE V25102024.md  FP AMANÉA CONSO SARII V23102024.md  FP AMANÉA EMPRUNTEURS CONSO V23102024.md  FP AMANÉA HABITATION V15112024.md  FP AMANÉA HOMME CLE V23102024.md  FP AMANÉA IMMO V22102024.md  FP AMANÉA PRO V19112024.md  FP AMANÉA PROTECTION ACCIDENT V20112024.md  FP AMANÉA SANTE INTERNATIONALE V21112024.md  FP AMANÉA VIE V28102024.md  FP SÉRÉNÉA EDUCATION V30102024.md  FP SÉRÉNÉA EPARGNE V08112024.md  FP SÉRÉNÉA PATRIMOINE V31102024.md  FP SÉRÉNÉA RETRAITE V29102024.md  Fiche Produit Amanéa Compte_CharteCDM_VF_A4.md  Liste des Produits.md  (+25 more)
(+284 files in other folders)
