[tool.poetry]
name = "migibot"
version = "0.1.0"
description = "RAG Based Agent for insurance"
authors = ["GitHamza0206 <zeroualihamza0206@gmail.com>"]
readme = "README.md"
packages = [{include = "services"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "^0.3.13"
langgraph = "^0.2.60"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
