[tool.poetry]
name = "migibot"
version = "0.1.0"
description = "RAG Based Agent for insurance"
authors = ["GitHamza0206 <zeroualihamza0206@gmail.com>"]
readme = "README.md"
packages = [{include = "services"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
langchain = "^0.3.13"
langgraph = "^0.2.60"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.9.0.post1"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.14"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
markdown = "^3.7"
unstructured = "^0.16.11"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
